# fractal-demo

./: .gitignore  .gitmodules  .touchedFilesForUpdate.txt.swp  CMakeLists.txt  FindLibCAF.cmake  FindLibCPPA.cmake  README.md  configure  controller.ui  fractal-cppa.config  fractal-cppa.files  fractal-cppa.includes  fractal.qrc  fractal_server.ini.example  main.ui  touchedFilesForUpdate.txt
caf/: cec.hpp  maybe.hpp
hdr/: client.hpp  config_map.hpp  fractal_client.hpp  fractal_cppa.hpp  fractal_server.hpp  imagelabel.h  long_double_info.hpp  mainwidget.hpp  projection.hpp  q_byte_array_info.hpp  server.hpp
include/: atoms.hpp  buffer.hpp  calculate_fractal.hpp  client.hpp  client_actor.hpp  config.hpp  config_map.hpp  controller.hpp  controllerwidget.hpp  counter.hpp  fractal_request.hpp  fractal_request_stream.hpp  image_sink.hpp  imagelabel.h  imagelabel.hpp  mainwidget.hpp  projection.hpp  q_byte_array_info.hpp  serialize_image.hpp  server.hpp  utility.hpp
src/: atoms.cpp  buffer.cpp  cafrun.cpp  calculate_fractal.cpp  cec.cpp  client.cpp  config.cpp  config_map.cpp  controller.cpp  controllerwidget.cpp  counter.cpp  fractal_client.cpp  fractal_cppa.cpp  fractal_request_stream.cpp  fractal_server.cpp  image_sink.cpp  imagelabel.cpp  long_double_info.cpp  main.cpp  mainwidget.cpp  maybe.cpp  q_byte_array_info.cpp  serialize_image.cpp  server.cpp
